fix: fix volume display for alignment.

--- a/DrumMachine/styles.css
+++ b/DrumMachine/styles.css
@@ -63,6 +63,7 @@ main {
 .controls-container {
   height: 25vh;
   width: 100%;
+  justify-items: center;
 }
 
 .btn-switch-container {
